force-app/main/default/objects/FileDetails__c/FileDetails__c.object-meta.xml
<CustomObject>
    <description>PacPoint-JB103118 - Created for BREG phase 1:  Stores file header information</description>
    <label>File Details</label>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>File Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>