force-app/main/default/objects/FileDetails__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB111618 - Created for BREG phase 1</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>File Details</relationshipLabel>
    <relationshipName>File_Details</relationshipName>
    <type>Lookup</type>
</CustomField>