force-app/main/default/objects/FileDetails__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>PacPoint-MV010419 - Created for BREG phase 1</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exam Documents</fullName>
            </value>
            <value>
                <fullName>Exam Deficiencies</fullName>
            </value>
            <value>
                <fullName>SEB Clerical</fullName>
            </value>
            <value>
                <fullName>SEB Investigation</fullName>
            </value>
            <value>
                <fullName>SEB Legal</fullName>
            </value>
            <value>
                <fullName>SEC - Broker-Dealer</fullName>
            </value>
            <value>
                <fullName>SEC - Broker-Dealer Agent</fullName>
            </value>
            <value>
                <fullName>SEC - By Qualification</fullName>
            </value>
            <value>
                <fullName>SEC - Franchise</fullName>
            </value>
            <value>
                <fullName>SEC - Investment Adviser</fullName>
            </value>
            <value>
                <fullName>SEC - Investment Adviser Representative</fullName>
            </value>
            <value>
                <fullName>SEC - Issuer Dealer</fullName>
            </value>
            <value>
                <fullName>SEC - Issuer Dealer Agent</fullName>
            </value>
            <value>
                <fullName>SEC - Model Accredited Investor</fullName>
            </value>
            <value>
                <fullName>SEC - Mutual Fund</fullName>
            </value>
            <value>
                <fullName>SEC - Regulation A</fullName>
            </value>
            <value>
                <fullName>SEC - Regulation D</fullName>
            </value>
            <value>
                <fullName>SEC - SCOR</fullName>
            </value>
            <value>
                <fullName>SEB Complaint</fullName>
            </value>
            <value>
                <fullName>SEC - Unit Investment Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>