force-app/main/default/objects/FileDetails__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>PacPoint-JB110718 - Created for BREG phase 1: This is the Salesforce Id for the file itself</description>
    <inlineHelpText>This is the Salesforce Id for the file itself</inlineHelpText>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>