force-app/main/default/objects/FileDetails__c/fields/ContentDocumentTitle__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentTitle__c</fullName>
    <description>PacPoint-JB110718 - Created for BREG phase 1 - Created for BREG phase 1</description>
    <inlineHelpText>This is the actual title of the loaded file in Salesforce.</inlineHelpText>
    <label>Content Document Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>