force-app/main/default/objects/FileDetails__c/fields/Created_After_SEC_DSCLM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_After_SEC_DSCLM_Launch_Date__c</fullName>
    <formula>OR(

AND(DATEVALUE(CreatedDate) &gt;= DATEVALUE(&apos;2023-03-03&apos;),  Filing__r.CreatedInCommunity__c = true),

AND(DATEVALUE(CreatedDate) &gt;= DATEVALUE(&apos;2023-03-16&apos;),  Filing__r.CreatedInCommunity__c = false)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created After SEC DSCLM Launch Date</label>
    <type>Checkbox</type>
</CustomField>