force-app/main/default/objects/FileDetails__c/fields/Data_Upload__c.field-meta.xml
<CustomField>
    <fullName>Data_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete after 12.7.20 - Pac Point</description>
    <label>Data Upload</label>
    <type>Checkbox</type>
</CustomField>