force-app/main/default/objects/FileDetails__c/fields/DateReceived__c.field-meta.xml
<CustomField>
    <fullName>DateReceived__c</fullName>
    <description>PacPoint-JB110718 - Created for BREG phase 1</description>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>