force-app/main/default/objects/FileDetails__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-JB110718 - Created for BREG phase 1</description>
    <inlineHelpText>Enter any extra information about the file here.</inlineHelpText>
    <label>Description</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>