force-app/main/default/objects/FileDetails__c/fields/DisplayBothFilesDSCLM__c.field-meta.xml
<CustomField>
    <fullName>DisplayBothFilesDSCLM__c</fullName>
    <formula>AND(DATEVALUE(CreatedDate) &gt;= DATEVALUE(&apos;2023-03-14&apos;), DATEVALUE(CreatedDate) &lt;= DATEVALUE(&apos;2023-03-18&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Both Files and DS CLM</label>
    <type>Checkbox</type>
</CustomField>