force-app/main/default/objects/FileDetails__c/fields/ExternalFileURL__c.field-meta.xml
<CustomField>
    <fullName>ExternalFileURL__c</fullName>
    <description>PacPoint-JB110718 - Created for BREG phase 1</description>
    <inlineHelpText>If this is warehoused, this url will point to the document externally.</inlineHelpText>
    <label>External File URL</label>
    <type>Url</type>
</CustomField>