force-app/main/default/objects/FileDetails__c/fields/ExternalFolderId__c.field-meta.xml
<CustomField>
    <fullName>ExternalFolderId__c</fullName>
    <description>PacPoint-JB110718 - Created for BREG phase 1</description>
    <inlineHelpText>If this is warehoused, this id will point to the folder in which the document is housed externally.</inlineHelpText>
    <label>External Folder Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>