force-app/main/default/objects/FileDetails__c/fields/FileURL__c.field-meta.xml
<CustomField>
    <fullName>FileURL__c</fullName>
    <label>File URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>