force-app/main/default/objects/FileDetails__c/fields/FileURLInternal__c.field-meta.xml
<CustomField>
    <fullName>FileURLInternal__c</fullName>
    <description>PacPoint-JB111618 - Created for BREG phase 1</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; ContentDocumentId__c ,  ContentDocumentTitle__c, &quot;_blank&quot;)</formula>
    <inlineHelpText>Clickable Link</inlineHelpText>
    <label>File URL (Internal)</label>
    <type>Text</type>
</CustomField>