force-app/main/default/objects/FileDetails__c/fields/Filing__c.field-meta.xml
<CustomField>
    <fullName>Filing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB111618 - Created for BREG phase 1</description>
    <label>Filing</label>
    <referenceTo>Filing__c</referenceTo>
    <relationshipLabel>File Details</relationshipLabel>
    <relationshipName>File_Details</relationshipName>
    <type>Lookup</type>
</CustomField>