force-app/main/default/objects/FileDetails__c/fields/Final_Version__c.field-meta.xml
<CustomField>
    <fullName>Final_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint - RA 011519 - BREG Phase 1</description>
    <inlineHelpText>Checking this box indicates that this is the final version of the document.</inlineHelpText>
    <label>Final Version</label>
    <type>Checkbox</type>
</CustomField>