force-app/main/default/objects/FileDetails__c/fields/FlagForDeletion__c.field-meta.xml
<CustomField>
    <fullName>FlagForDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RA122618 - Created for BREG phase 1</description>
    <inlineHelpText>Check this box when you want to flag a document for deletion.</inlineHelpText>
    <label>Flag For Deletion</label>
    <type>Checkbox</type>
</CustomField>