force-app/main/default/objects/FileDetails__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-DL103121 for BREG Support Case2411. Referenced by automation to trigger creating or deleting a share record for granting or removing access to a File Detail record (example: grant/remove share for SEC users to edit an Exam record when Owner or Assistant Examiner field is populated; or edit a Filing record when Reviewer field is populated.</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>