force-app/main/default/objects/FileDetails__c/fields/SEB_Case__c.field-meta.xml
<CustomField>
    <fullName>SEB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB111618 - Created for BREG phase 1</description>
    <label>SEB Case</label>
    <referenceTo>SEBCase__c</referenceTo>
    <relationshipLabel>File Details</relationshipLabel>
    <relationshipName>File_Details</relationshipName>
    <type>Lookup</type>
</CustomField>