force-app/main/default/objects/FileDetails__c/fields/Share_with_SEC_Manager__c.field-meta.xml
<CustomField>
    <fullName>Share_with_SEC_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by Pac Point for case 00011629. For the sharing rule with the following criteria: 

Criteria: Criteria Based Rule Where Category = &quot;SEB Clerical&quot;, &quot;SEB Investigation&quot;, &quot;SEB Legal&quot;, &quot;SEB Complaint&quot; AND SEB Case Field is Not Null - sharing with Role and Subordinates of &quot;SEC Manager&quot; Role.</description>
    <label>Share with SEC Manager</label>
    <type>Checkbox</type>
</CustomField>