force-app/main/default/objects/FileDetails__c/fields/Show_Migrate_Files__c.field-meta.xml
<CustomField>
    <fullName>Show_Migrate_Files__c</fullName>
    <formula>$Profile.Name == &quot;System Administrator&quot; ||  $User.Username  == &apos;kumetsu@dcca.hawaii.gov&apos; || $User.Username == &apos;tokuda@dcca.hawaii.gov&apos; || $User.Username == &apos;byoshimura@dcca.hawaii.gov&apos;</formula>
    <label>Show Migrate Files</label>
    <type>Checkbox</type>
</CustomField>