force-app/main/default/objects/FileDetails__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-JB110718 - Created for BREG phase 1</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accredited investor notice</fullName>
            </value>
            <value>
                <fullName>Affidavit</fullName>
            </value>
            <value>
                <fullName>Annual financial statements</fullName>
            </value>
            <value>
                <fullName>Application for Registration of Securities by Qualification</fullName>
            </value>
            <value>
                <fullName>Attorney&apos;s opinion</fullName>
            </value>
            <value>
                <fullName>Attorney Exhibits</fullName>
            </value>
            <value>
                <fullName>Attorney Work Product</fullName>
            </value>
            <value>
                <fullName>Audited financial statements</fullName>
            </value>
            <value>
                <fullName>Bank Records</fullName>
            </value>
            <value>
                <fullName>By Qualification Application Attachment</fullName>
            </value>
            <value>
                <fullName>Certified copy of Issuer&apos;s articles of organization</fullName>
            </value>
            <value>
                <fullName>Certified Corporate Resolution</fullName>
            </value>
            <value>
                <fullName>Company Notice Filing</fullName>
            </value>
            <value>
                <fullName>Complainant Documents</fullName>
            </value>
            <value>
                <fullName>Consent by accountant</fullName>
            </value>
            <value>
                <fullName>Consent by counsel</fullName>
            </value>
            <value>
                <fullName>Consent by tax adviser</fullName>
            </value>
            <value>
                <fullName>Consent to Service of Process</fullName>
            </value>
            <value>
                <fullName>Consent to Service of Process and Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Consent to service of process and corporate resolution</fullName>
            </value>
            <value>
                <fullName>Consent to Service of Process By Issuer of or Dealer in Securities</fullName>
            </value>
            <value>
                <fullName>Consent w/acknowledgement</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Copy of advertising</fullName>
            </value>
            <value>
                <fullName>Copy of general announcement</fullName>
            </value>
            <value>
                <fullName>Copy of Prospectus</fullName>
            </value>
            <value>
                <fullName>Copy of resolutions by directors</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Deficiency Correction - 1</fullName>
            </value>
            <value>
                <fullName>Deficiency Correction - 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>