force-app/main/default/objects/FileDetails__c/recordTypes/SEB.recordType-meta.xml
<RecordType>
    <fullName>SEB</fullName>
    <active>true</active>
    <description>PacPoint-MV010819 - Created for BREG phase 1</description>
    <label>SEB</label>
</RecordType>