force-app/main/default/objects/FileDetails__c/recordTypes/SEC.recordType-meta.xml
<RecordType>
    <fullName>SEC</fullName>
    <active>true</active>
    <description>PacPoint-MV010819 - Created for BREG phase 1</description>
    <label>SEC</label>
</RecordType>