force-app/main/default/objects/FileDetails__c/validationRules/FilingReviewerCreateModifyFileDetail.validationRule-meta.xml
<ValidationRule>
    <fullName>FilingReviewerCreateModifyFileDetail</fullName>
    <active>false</active>
    <description>PacPoint-DL-092721 Case #2411 BREG Support</description>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    $Profile.Name &lt;&gt; &quot;DCCA SEC/SEB System Administrator&quot;,
    $Profile.Name &lt;&gt; &quot;DCCA BREG - CustomerCommunityLogin&quot;,

OR(

AND(
    NOT(ISBLANK(Filing__c )),
    NOT(ISBLANK(Filing__r.Reviewer__r.Username)),
    $User.Username &lt;&gt; Filing__r.Reviewer__r.Username),

AND(
    NOT(ISNEW()),
    ISCHANGED(Filing__c),
    ISBLANK(Filing__c),
    NOT(ISBLANK(PRIORVALUE(Filing__c))),
    NOT($User.Username = Filing__r.Reviewer__r.Username),

AND(
    NOT(ISNEW()),
    ISCHANGED(Filing__c),
    NOT(ISBLANK(Filing__c)),
    NOT(ISBLANK(PRIORVALUE(Filing__c))),
    NOT($User.Username = Filing__r.Reviewer__r.Username))
)
)
)</errorConditionFormula>
    <errorMessage>Only the Filing Reviewer and select users can create/edit File Details</errorMessage>
</ValidationRule>