force-app/main/default/objects/FileDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Filing__c</columns>
    <columns>Exam__c</columns>
    <columns>SEB_Case__c</columns>
    <columns>Investigation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>