force-app/main/default/objects/FileDetails__c/listViews/SEB_Flag_For_Deletion.listView-meta.xml
<ListView>
    <fullName>SEB_Flag_For_Deletion</fullName>
    <columns>FlagForDeletion__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>Exam__c</columns>
    <columns>Investigation__c</columns>
    <columns>SEB_Case__c</columns>
    <columns>ContentDocumentTitle__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FlagForDeletion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FileDetails__c.SEB</value>
    </filters>
    <label>SEB - Flag For Deletion</label>
    <sharedTo>
        <group>SEB_File_Details_Group</group>
    </sharedTo>
</ListView>